sem6-frontend/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: individualsem6.azurecr.io/frontendindividual:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
