sem6-frontend/kubernetes/kong-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kong-database
  name: kong-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong-database
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kong-database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: kong
            - name: POSTGRES_PASSWORD
              value: kong
            - name: POSTGRES_USER
              value: kong
          image: postgres:13
          name: kong-database
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
