sem6-frontend/kubernetes/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kong
    spec:
      containers:
        - args:
            - sh
            - -c
            - kong migrations bootstrap && /usr/local/bin/kong start
          image: kong/kong-gateway:3.7.0.0
          name: kong
          ports:
            - containerPort: 8000
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8001
              protocol: TCP
            - containerPort: 8444
              protocol: TCP
            - containerPort: 8002
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/local/kong/declarative/kong.yaml
              name: kong-cm0
              subPath: kong.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: kong.yaml
                path: kong.yaml
            name: kong-cm0
          name: kong-cm0
