sem6-frontend/kubernetes/kong-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kong-database
  name: kong-database
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: kong-database
