sem6-frontend/kubernetes/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
    - name: "proxy"
      port: 8000
      targetPort: 8000
    - name: "proxy-ssl"
      port: 8443
      targetPort: 8443
    - name: "admin"
      port: 8001
      targetPort: 8001
    - name: "admin-ssl"
      port: 8444
      targetPort: 8444
    - name: "admin-gui"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: kong
