sem6-frontend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - linkedtindersem6.nl
    secretName: tls-secret
  rules:
    - host: "linkedtindersem6.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
