sem6-frontend/kubernetes/kongingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-kong-manager-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "linkedtindersem6kong.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
